<?xml version="1.0"?>
<package format="2">
  <name>gripper_force_trigger</name>
  <version>0.0.1</version>
  <description>Reads HX711 from GPIO and publishes /gripper_force_trigger</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
